--- a/src/components/JourneyNoteCard.module.css
+++ b/src/components/JourneyNoteCard.module.css
@@ -16,7 +16,8 @@
 }
 
 .container {
-    height: 100%;
+    width: 320px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
